--- a/project/sass/views/components/_preloader.scss
+++ b/project/sass/views/components/_preloader.scss
@@ -1,6 +1,7 @@
 
 #preloader {
 	background: $cd-red;
+	color: $cd-red;
 	position: fixed;
 	top: 0;
 	left: 0;
